--- a/Carrom/Carrom.csproj
+++ b/Carrom/Carrom.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="MySqlConnector" Version="2.3.6" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
   </ItemGroup>
 
