--- a/Carrom/Carrom.csproj
+++ b/Carrom/Carrom.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Carrom Board.jpg" />
     <None Remove="Carrom Start Image.jpg" />
+    <None Remove="Carrom_Board3.jpg" />
     <None Remove="Configuration picture.jpg" />
     <None Remove="Configuration_picture.jpg" />
     <None Remove="Pictures\Carrom Board.jpg" />
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Carrom_Board3.jpg" />
     <Resource Include="Pictures\Configuration_picture.jpg" />
     <Resource Include="Pictures\Carrom Board.jpg" />
     <Resource Include="Pictures\Carrom Start Image.jpg" />
